--- a/index.html
+++ b/index.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trista's Projects</title>
+    <link rel='stylesheet' href='../../normalize/nomalize.css'>
+    <link rel='stylesheet' href='./style/index.css'>
 </head>
+<header>
+    <h1>Trista's Projects</h1>
+    <nav>
+        <a href='#'>Home</a>
+        <a href='#'>About</a>
+        <a href='#'>Contacts</a>
+        <a href='#'>Projects</a>
+
+    </nav>
+</header>
+
 <body>
-    
+    <section class='about'>
+        <img src='https://picsum.photos/200/200' alt='change before submitting'>
+        <div>
+            <h2>Trista Runions</h2>
+            <button type='button' class='button'>My Projects</button>
+            <p>I started my coding journey in 2019 with self teaching. I was able to learn HTML and CSS basics on my own
+                before I hit a wall with Javascript. I joined Lambda School in March 2021 and am expected to graduate in
+                March 2022.</p>
+        </div>
+
+    </section>
+
+    <section class='gallery'>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+        <div>
+            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <p>Title of Project</p>
+        </div>
+
+    </section>
+
+    <footer>
+        <h2>Like What You See?</h2>
+        <button type='button' class='button'>Contact Me</button>
+    </footer>
 </body>
+
 </html>
