added hover features in CSS, changed fonts and button/nav shapes"
s

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trista's Projects</title>
+    <title>Porfolio</title>
     <link rel='stylesheet' href='../../normalize/nomalize.css'>
     <link rel='stylesheet' href='./style/index.css'>
 </head>
 <header>
-    <h1>Trista's Projects</h1>
+    <h1>Trista Runions's Portfolio</h1>
     <nav>
         <a href='#'>Home</a>
         <a href='#'>About</a>
