made media queries for max-width:800px for header and .about section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' href='./style/index.css'>
 </head>
 <header>
-    <h1>Trista Runions's Portfolio</h1>
+    <h1>Trista Runions</h1>
     <nav>
         <a href='#'>Home</a>
         <a href='#'>About</a>
