--- a/index.html
+++ b/index.html
@@ -33,36 +33,43 @@
     </section>
 
     <section class='gallery'>
+
+        <a href="https://trunions.github.io/web_project_1/">
+            <div>
+                <img src='./Images/Learning how to learn.png' alt='Learning How To Learn'>
+                <p>Learning How To Learn</p>
+            </div>
+        </a>
+        <a href="https://trunions.github.io/web_project_3/">
+            <div>
+                <img src='./Images/From portland to portland.png' alt='From Portland to Portland'>
+                <p>From Portland to Portland</p>
+            </div>
+        </a>
+        <a href="https://trunions.github.io/web_project_4/">
+            <div>
+                <img src='./Images/around the us.png' alt='Around The US'>
+                <p>Around The US</p>
+            </div>
+        </a>
         <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <img src='https://picsum.photos/200/100' alt='change before submitting'>
             <p>Title of Project</p>
         </div>
         <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <img src='https://picsum.photos/200/100' alt='change before submitting'>
             <p>Title of Project</p>
         </div>
         <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <img src='https://picsum.photos/200/100' alt='change before submitting'>
             <p>Title of Project</p>
         </div>
         <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <img src='https://picsum.photos/200/100' alt='change before submitting'>
             <p>Title of Project</p>
         </div>
         <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
-            <p>Title of Project</p>
-        </div>
-        <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
-            <p>Title of Project</p>
-        </div>
-        <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
-            <p>Title of Project</p>
-        </div>
-        <div>
-            <img src='https://picsum.photos/200/200' alt='change before submitting'>
+            <img src='https://picsum.photos/200/100' alt='change before submitting'>
             <p>Title of Project</p>
         </div>
 
